Layout bugfix: intermediate width for posts row

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -126,6 +126,7 @@
     .Root,
     .PostFooter {
         padding-bottom: 0;
+        width: 100%;
     }
 }
 
